Removed the .bg-main class from the global style sheet and moved it to the nav-bar.component.scss to reduce the global CSS scope and improve readability. The background color attribute was also corrected from using the SASS variable $main to the CSS variable --main_basic.

--- a/front-wcag/src/app/shared/nav-bar/nav-bar.component.scss
+++ b/front-wcag/src/app/shared/nav-bar/nav-bar.component.scss
@@ -59,3 +59,7 @@
   flex-direction: row;
   justify-content: space-around;
 }
+
+.bg-main {
+  background-color: var(--main_basic);
+}
