--- a/front-wcag/src/styles.scss
+++ b/front-wcag/src/styles.scss
@@ -46,9 +46,7 @@ html{
   }
 }
 
-.bg-main {
-  background-color: $main;
-}
+
 
 body{
 margin:0;
